<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.campusgo.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/tasksFragment"
        android:name="com.campusgo.ui.tasks.TasksFragment"
        android:label="@string/nav_tasks"
        tools:layout="@layout/fragment_tasks" />

    <fragment
        android:id="@+id/messageFragment"
        android:name="com.campusgo.ui.message.MessageFragment"
        android:label="@string/nav_messages"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.campusgo.ui.profile.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>
